--- a/storage-impl-hbm/src/main/resources/hibernate/hibernate-common.properties
+++ b/storage-impl-hbm/src/main/resources/hibernate/hibernate-common.properties
@@ -14,8 +14,8 @@ hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFa
 # hbm versions [3.3, 4.x)
 #hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
 # default is ehcache.xml
-#net.sf.ehcache.configurationResourceName.in_memory_db=ehcache-in_memory_db.xml
-#net.sf.ehcache.configurationResourceName.jdbc_ds=ehcache-jdbc_ds.xml
+#net.sf.ehcache.configurationResourceName=ehcache-in_memory_db.xml
+#net.sf.ehcache.configurationResourceName=ehcache-jdbc_ds.xml
 # net.sf.ehcache.cacheManagerName property overrides ehcache.xml configured name (<ehcache name="cacheManagerName" ...)
 # This rename won't work with before 4x because is not using
 # net.sf.ehcache.hibernate.HibernateUtil.overwriteCacheManagerIfConfigured but
