--- a/storage-impl-hbm/src/main/resources/hibernate/hibernate-in-memory.properties
+++ b/storage-impl-hbm/src/main/resources/hibernate/hibernate-in-memory.properties
@@ -1,5 +1,6 @@
 # in memory db
 hibernate.hbm2ddl.auto=update
+net.sf.ehcache.configurationResourceName=ehcache/ehcache-in-memory.xml
 # H2 Database
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 # HSQLDB (HyperSQL Database)
