--- a/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-stage.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-stage.properties
@@ -1,5 +1,10 @@
 # mysql, exifweb-tests
-jdbcUrl=jdbc:mysql://${db.host}:3306/exifweb-tests?useSSL=false
+#
+# see <db.host> in pom.xml
+# ${db.host} is unfolded by maven-resources-plugin
+#
+#jdbcUrl=jdbc:mysql://${db.host}:3306/exifweb-tests?useSSL=false
+jdbcUrl=jdbc:mysql://adrhc.go.ro:3306/exifweb-tests?useSSL=false
 username=exifweb
 password=exifweb
 minimumIdle=1
