--- a/pom.xml
+++ b/pom.xml
@@ -780,8 +780,11 @@
 
                             In order to avoid JVM fork when testing I have to run separately in-memory, stage and production tests.
 	                        When at least two of them run together the spring configuration overlaps and random errors occur.
+
+	                        It supports the same syntax as -T in maven-core: if you terminate the value with a 'C',
+	                        that value will be multiplied with the number of available CPU cores in your system.
                         -->
-                        <forkCount>4</forkCount>
+                        <forkCount>1C</forkCount>
                         <reuseForks>false</reuseForks>
                         <!--
                             maven-surefire-report-plugin needs false value
@@ -961,7 +964,10 @@
 
     <profiles>
         <profile>
-            <!-- in-memory DB -->
+            <!--
+                in-memory only tests using in-memory DB
+                Requires <forkCount> usage!
+            -->
             <id>db-off</id>
             <properties>
                 <!--
@@ -992,7 +998,10 @@
             </activation>
         </profile>
         <profile>
-            <!-- on disk DB (stage/production database) -->
+            <!--
+                in-memory, staging and production tests using on disk DB (stage/production database)
+                Requires <forkCount> usage!
+            -->
             <id>db-on</id>
             <properties>
                 <junit4.storage-impl-hbm.groups>
@@ -1026,6 +1035,52 @@
                     junit5&amp;photos&amp;staging,
                     junit5&amp;photos&amp;production,
                     junit5&amp;photos&amp;misc
+                </junit5.photos.groups>
+            </properties>
+        </profile>
+        <profile>
+            <!--
+                staging only tests using on disk DB
+                Does NOT require <forkCount> usage!
+            -->
+            <id>staging-only</id>
+            <properties>
+                <junit4.storage-impl-hbm.groups>
+                    image.persistence.repository.springconfig.HbmStagingJdbcDbConfig.class
+                </junit4.storage-impl-hbm.groups>
+                <junit4.photos.groups>
+                    image.photos.springconfig.PhotosStagingJdbcDbConfig.class
+                </junit4.photos.groups>
+                <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springconfig.HbmStagingJdbcDbConfig,
+                    junit5&amp;hbm&amp;staging
+                </junit5.storage-impl-hbm.groups>
+                <junit5.photos.groups>
+                    image.photos.springconfig.PhotosStagingJdbcDbConfig,
+                    junit5&amp;photos&amp;staging
+                </junit5.photos.groups>
+            </properties>
+        </profile>
+        <profile>
+            <!--
+                production only tests using on disk DB
+                Does NOT require <forkCount> usage!
+            -->
+            <id>production-only</id>
+            <properties>
+                <junit4.storage-impl-hbm.groups>
+                    image.persistence.repository.springconfig.HbmProdJdbcDbConfig.class
+                </junit4.storage-impl-hbm.groups>
+                <junit4.photos.groups>
+                    image.photos.springconfig.PhotosProdJdbcDbConfig.class
+                </junit4.photos.groups>
+                <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springconfig.HbmProdJdbcDbConfig,
+                    junit5&amp;hbm&amp;production
+                </junit5.storage-impl-hbm.groups>
+                <junit5.photos.groups>
+                    image.photos.springconfig.PhotosProdJdbcDbConfig,
+                    junit5&amp;photos&amp;production
                 </junit5.photos.groups>
             </properties>
         </profile>
