--- a/storage-entities/pom.xml
+++ b/storage-entities/pom.xml
@@ -32,4 +32,22 @@
             </exclusions>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration combine.self="append">
+                    <!--<argLine>-Dspring.profiles.active=jdbc-ds</argLine>-->
+                    <environmentVariables>
+                        <!-- for catching tests without proper spring profile annotation -->
+                        <spring.profiles.active>fake-profile</spring.profiles.active>
+                    </environmentVariables>
+                    <!--<groups>${junit4.photos.groups}</groups>-->
+                    <groups>${junit5.storage-entities.groups}</groups>
+                    <forkCount>0</forkCount>
+                    <reuseForks>true</reuseForks>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
