--- a/pom.xml
+++ b/pom.xml
@@ -756,7 +756,7 @@
                         </dependencies>
                     -->
                     <configuration>
-                        <argLine>-Xmx1g -XX:MetaspaceSize=512m</argLine>
+                        <argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>
                         <!--
                             https://stackoverflow.com/questions/26882936/why-does-springjunit4classrunner-not-work-with-surefire-parallel-methods
                             parallel=methods -> ApplicationContext fails with this multithreaded environment
@@ -1052,9 +1052,9 @@
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <argLine>-Xmx1g -XX:MetaspaceSize=512m</argLine>
+                            <argLine>-Xmx512m -XX:MetaspaceSize=1g</argLine>
                             <!-- @NotThreadSafe no longer matters because we are not using threads in the forked JVMs -->
-                            <forkCount>1C</forkCount>
+                            <forkCount>0.5C</forkCount>
                             <reuseForks>true</reuseForks>
                             <!-- all @NotThreadSafe classes are run with a single thread! -->
                             <!--<threadCount>4</threadCount>-->
@@ -1088,7 +1088,7 @@
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <argLine>-Xmx1g -XX:MetaspaceSize=512m</argLine>
+                            <argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>
                             <!-- @NotThreadSafe no longer matters because we are not using threads in the forked JVMs -->
                             <forkCount>1C</forkCount>
                             <reuseForks>true</reuseForks>
