--- a/pom.xml
+++ b/pom.xml
@@ -1052,10 +1052,17 @@
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <argLine>-Xmx512m -XX:MetaspaceSize=1g</argLine>
+                            <argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>
                             <!-- @NotThreadSafe no longer matters because we are not using threads in the forked JVMs -->
-                            <forkCount>0.5C</forkCount>
-                            <reuseForks>true</reuseForks>
+                            <forkCount>1C</forkCount>
+                            <!--
+                                ERROR
+                                    ExecutionException The forked VM terminated without properly saying goodbye.
+                                    VM crash or System.exit called?
+                                SOLUTION
+                                    <reuseForks>false</reuseForks>
+                            -->
+                            <reuseForks>false</reuseForks>
                             <!-- all @NotThreadSafe classes are run with a single thread! -->
                             <!--<threadCount>4</threadCount>-->
                             <!--<parallel>methods</parallel>-->
@@ -1091,7 +1098,14 @@
                             <argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>
                             <!-- @NotThreadSafe no longer matters because we are not using threads in the forked JVMs -->
                             <forkCount>1C</forkCount>
-                            <reuseForks>true</reuseForks>
+                            <!--
+                                ERROR
+                                    ExecutionException The forked VM terminated without properly saying goodbye.
+                                    VM crash or System.exit called?
+                                SOLUTION
+                                    <reuseForks>false</reuseForks>
+                            -->
+                            <reuseForks>false</reuseForks>
                             <!-- all @NotThreadSafe classes are run with a single thread! -->
                             <!--<threadCount>4</threadCount>-->
                             <!--<parallel>methods</parallel>-->
