--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -254,22 +254,22 @@
                 https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html
                 multiple goals bound to a phase are executed in the same order as they are declared in the POM
             -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-                <configuration combine.self="append">
-                    <aspectLibraries>
-                        <aspectLibrary>
-                            <groupId>org.springframework</groupId>
-                            <artifactId>spring-aspects</artifactId>
-                        </aspectLibrary>
-                        <aspectLibrary>
-                            <groupId>org.springframework.security</groupId>
-                            <artifactId>spring-security-aspects</artifactId>
-                        </aspectLibrary>
-                    </aspectLibraries>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>aspectj-maven-plugin</artifactId>-->
+                <!--<configuration combine.self="append">-->
+                    <!--<aspectLibraries>-->
+                        <!--<aspectLibrary>-->
+                            <!--<groupId>org.springframework</groupId>-->
+                            <!--<artifactId>spring-aspects</artifactId>-->
+                        <!--</aspectLibrary>-->
+                        <!--<aspectLibrary>-->
+                            <!--<groupId>org.springframework.security</groupId>-->
+                            <!--<artifactId>spring-security-aspects</artifactId>-->
+                        <!--</aspectLibrary>-->
+                    <!--</aspectLibraries>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
         </plugins>
         <finalName>exifweb</finalName>
