log sql + cache statistics bug

--- a/storage-impl-hbm/src/main/resources/hibernate/hibernate-common.properties
+++ b/storage-impl-hbm/src/main/resources/hibernate/hibernate-common.properties
@@ -1,6 +1,6 @@
 # hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 hibernate.jdbc.batch_size=20
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.validator.autoregister_listeners=false
 # http://www.baeldung.com/hibernate-second-level-cache => for hibernate 5.x
