--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
 
             <dependency>
                 <groupId>exifweb</groupId>
+                <artifactId>storage-jpa2x-hbm-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>exifweb</groupId>
                 <artifactId>storage-entities</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
@@ -151,6 +157,14 @@
             <dependency>
                 <groupId>exifweb</groupId>
                 <artifactId>storage-impl-hbm</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>exifweb</groupId>
+                <artifactId>storage-jpa2x-hbm-impl</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
