--- a/storage-impl-hbm/pom.xml
+++ b/storage-impl-hbm/pom.xml
@@ -124,6 +124,13 @@
 
         <dependency>
             <groupId>exifweb</groupId>
+            <artifactId>util</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>exifweb</groupId>
             <artifactId>storage-entities</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
