--- a/util/pom.xml
+++ b/util/pom.xml
@@ -22,9 +22,8 @@
             <artifactId>spring-beans</artifactId>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 </project>
