--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -120,6 +120,18 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>exifweb</groupId>
+            <artifactId>storage-jpa2x-hbm-impl</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+            <!--
+                needs version because including jar also
+                solves ERROR: The POM for exifweb:photos:jar:1.0-SNAPSHOT is invalid, transitive dependencies (if any) will not be available, enable debug logging for more details
+            -->
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -216,6 +228,26 @@
             <!--</aspectLibraries>-->
             <!--</configuration>-->
             <!--</plugin>-->
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration combine.self="append">
+                    <!--<argLine>-Dspring.profiles.active=jdbc-ds</argLine>-->
+                    <environmentVariables>
+                        <!-- for catching tests without proper spring profile annotation -->
+                        <spring.profiles.active>fake-profile</spring.profiles.active>
+                    </environmentVariables>
+                    <groups>${junit5.webapp.groups}</groups>
+                    <!--<properties>-->
+                    <!--<includeTags>MiscTestCategory</includeTags>-->
+                    <!--<includeTags>image.photos.JsonMapperConfig</includeTags>-->
+                    <!--<includeTags>image.photos.springconfigtosInMemoryDbConfig</includeTags>-->
+                    <!--<includeTags>junit5&amp;photos&amp;inmemorydb</includeTags>-->
+                    <!--<includeTags>junit5&amp;photos&amp;json</includeTags>-->
+                    <!--<includeTags>junit5&amp;photos&amp;misc</includeTags>-->
+                    <!--</properties>-->
+                </configuration>
+            </plugin>
 
         </plugins>
         <finalName>exifweb</finalName>
